--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="/css/lib/swiper.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/search.css" />
+<link rel="stylesheet" href="/css/userProfile.css" />
 <title th:value="${user.firstName}"></title>
 </head>
 <body>
