--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,6 +52,9 @@
 					<p>
 						<a href="/password/reset" th:text="#{login.forgot-password}"></a>
 					</p>
+					<p>
+						<a href="/register" th:text="#{login.register}"></a>
+					</p>
 
 					<div class="container" style="margin-top: 48px;" id="oauth-div">
 						<div class="box">
