--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -1,5 +1,5 @@
-body {
-	min-width: 320px;
+html {
+	min-width: 240px;
 }
 
 button {
@@ -55,6 +55,10 @@ svg {
 	float: left;
 	padding-left: 4px;
 	color: red;
+}
+
+.left {
+	float: left;
 }
 
 .colored svg {
@@ -198,7 +202,7 @@ input[type=range].slider {
 		color: white;
 	}
 	.message {
-		background-color: #121212;
+		background-color: black;
 	}
 	.option {
 		color: #121212 !important;
@@ -247,5 +251,103 @@ input[type=range].slider {
 		.profile-bottom.dimmed {
 			background: rgba(18, 18, 18, 0.9) !important;
 		}
+	}
+}
+
+/* KAIOS Screns are very small */
+@media screen and (max-width: 302px) {
+	#navbar-item-register {
+		display: none;
+	}
+	#oauth-div span {
+		display: none;
+	}
+	#audio {
+		width: 208px;
+	}
+	.box {
+		box-shadow: initial;
+	}
+	#header-logged-in {
+		display: none;
+	}
+	.profile-bottom .button {
+		padding: 12px;
+		height: 42px !important;
+	}
+	#donate-modal svg {
+		display: none;
+	}
+	.modal-content {
+		max-height: 100%;
+	}
+	.modal-content .box {
+		border-radius: 0px;
+	}
+	#search-right .label {
+		display: none;
+	}
+	#search-right {
+		display: block;
+	}
+	#filter-div:not(.searched) {
+		max-width: 100%;
+		display: inline-block;
+	}
+	#filter-div .slider-container {
+		width: 160px;
+	}
+	#max-distance-slider {
+		width: 120px;
+	}
+	.content-background {
+		display: none;
+	}
+	#main-logged-in {
+		min-height: calc(100vh - 52px);
+	}
+	.user-search-div {
+		min-height: calc(100vh - 52px);
+	}
+	.profile-bottom {
+		height: initial !important;
+	}
+	.profile-bottom.dimmed {
+		background: rgba(0, 0, 0, 0.0) !important;
+	}
+	/*
+	.view-profile-div {
+		padding-top: initial !important;
+	}
+	*/
+	.notification-div {
+		min-width: initial !important;
+	}
+	.notification-card .profile-pic {
+		height: 40px;
+	}
+	.messages-card .profile-pic {
+		height: 40px;
+	}
+	#message-send-button {
+		padding: 0;
+		height: 40px !important;
+		width: 40px !important;
+	}
+	#message-send-input {
+		width: calc(100% - 52px - 2px) !important;
+		padding-top: 0.1em;
+		padding-bottom: 0.1em;
+		font-size: 1rem;
+	}
+	#messages-div {
+		min-height: calc(100vh - 220px) !important;
+	}
+	.modal-content .box {
+		padding: 6px;
+	}
+	
+	#donate-cards-div {
+	    height: calc(100vh - 122px) !important;
 	}
 }
