--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -22,7 +22,7 @@
 
 	</div>
 
-	<div th:fragment="header">
+	<div th:fragment="header" id="header">
 		<nav class="navbar is-info">
 			<div class="navbar-brand">
 				<a class="navbar-item" href="/"> <img src="/img/icon.png"
@@ -46,12 +46,12 @@
 		</nav>
 	</div>
 
-	<div th:fragment="header-logged-in">
+	<div th:fragment="header-logged-in" id="header-logged-in">
 		<nav class="navbar is-info">
 			<div class="navbar-brand">
 				<a class="navbar-item"> <img src="/img/icon.png" width="40"
 					height="40">
-				</a> <a class="navbar-item" th:text="#{app.name}"></a>
+				</a> <a id="header-app-name" class="navbar-item" th:text="#{app.name}"></a>
 			</div>
 
 			<div style="width: 100%; display: flex;">
@@ -172,7 +172,7 @@
 						<i class="fa fa-thumbs-up fa-10x"></i>
 					</div>
 					<div class="swiper-slide">
-						<div class="card is-horizontal" style="width: 100%;">
+						<div class="card is-horizontal" style="width: 100%; height: 100%;">
 							<div class="card-image" onclick="toggleCardContent()">
 								<figure class="image">
 									<img th:src="${user.profilePicture}" class="profile-pic">
@@ -212,12 +212,11 @@
 								</div>
 								<div class="profile-bottom full-width dimmed"
 									style="display: inline-block;">
-									<div
-										style="width: 140px; float: left; padding-top: 33px; font-size: 1.3em;">
-										<P>
-											<a th:href="${'/profile/view/' + user.idEncoded}"
-												target="_blank" th:text="#{view-profile}"></a>
-										</P>
+									<div class="left">
+										<button class="button colored is-rounded is-info" 
+											th:onclick="window.open([[${'/profile/view/' + user.idEncoded}]], '_blank');" >
+											<i class="fa fa-user"></i>
+										</button>
 									</div>
 									<div class="right">
 										<button class="button colored is-rounded is-danger"
