Reduce audio file size maximum Adjust path for manifest Removed all empty Exceptions Revert back to https://localhost:8080 Uploaded images are all the same size Bug fixes

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -244,6 +244,9 @@ input[type=range].slider {
 	.datetimepicker-footer-cancel svg {
 		color: #209cee !important;
 	}
+	#addImageDiv path {
+		color: #209cee;
+	}
 	@media screen and (max-width: 1024px) {
 		.content-background {
 			background: rgba(18, 18, 18, 0.9) !important;
