--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Alovoa">
 <meta name="theme-color" content="#3298DC" />
-<link rel="manifest" href="/json/manifest.json">
+<link rel="manifest" href="/manifest/manifest.json">
 <link rel="apple-touch-icon" href="/img/android-chrome-192x192.png">
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
