--- a/src/main/resources/templates/messageDetail.html
+++ b/src/main/resources/templates/messageDetail.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Alovoa">
-<link rel="manifest" href="/json/manifest.json">
+<link rel="manifest" href="/manifest/manifest.json">
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
@@ -30,7 +30,7 @@
 				<div class="container" style="width: 100%;" id="messages-div"></div>
 			</div>
 			<div class="section">
-				<div class="container" style="width: 100%;" id="message-send-div">
+				<div class="container" style="width: 100%; display: flex;" id="message-send-div">
 					<input class="input is-medium is-rounded" type="text"
 						id="message-send-input" placeholder="...">
 					<div id="message-send-padding"></div>
