Improved email template

--- a/src/main/resources/static/templates/email.html
+++ b/src/main/resources/static/templates/email.html
@@ -1,47 +1,48 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head> 
-    <body style="background-color: #f6f6f6;">
-        <table style="width: 100%;">
-            <tbody style="width: 100%;">
-                <tr style="width: 100%;">
-                    <td style="margin: 0 auto !important;
-                        max-width: 580px;
-                        padding: 24px;
-                        width: 580px;
-                        background-color: white;">
-                        <table style="width: 100%;">
-                            <tbody style="max-width: 600px;">
-                                <tr>
-                                    <td style="max-width: 600px; 
-                                        word-break: break-all;">
-                                        <span>MAIL_BODY</span>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                </tr>
-                <tr style="width: 100%;">
-                    <td style="width: 100%;">
-                        <table style="width: 100%;">
-                            <tbody>
-                                <tr>
-                                    <td style="color: #999999;
-                                        font-size: 12px;
-                                        text-align: center;
-                                        word-break: break-all;">
-                                        <span>COMPANY_NAME</span><br>
-                                        <a href="HREF_WEBSITE">WEBSITE</a> <a href="HREF_DONATE">DONATE</a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </body>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body style="background-color: #f6f6f6;">
+	<table style="width: 100%;">
+		<tbody>
+			<tr>
+				<td style="padding-bottom: 24px;"><img
+					src="SRC_IMAGE" /></td>
+			</tr>
+		</tbody>
+	</table>
+	<table style="width: 100%;">
+		<tbody style="width: 100%;">
+			<tr style="width: 100%;">
+				<td
+					style="margin: 0 auto !important; max-width: 580px; padding-right: 24px; padding-left: 24px; padding-top: 48px; padding-bottom: 48px; max-width: 580px; background-color: white;">
+					<table style="width: 100%;">
+						<tbody style="max-width: 600px;">
+							<tr>
+								<td style="max-width: 600px; word-break: break-all;"><span>MAIL_BODY</span>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
+			</tr>
+			<tr style="width: 100%;">
+				<td style="width: 100%;">
+					<table style="width: 100%;">
+						<tbody>
+							<tr>
+								<td
+									style="color: #999999; font-size: 12px; text-align: center; padding-top: 24px; padding-bottom: 24px; word-break: break-all;">
+									<span>COMPANY_NAME</span><br> <a href="HREF_WEBSITE">WEBSITE</a>
+									<a href="HREF_DONATE">DONATE</a>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</body>
 </html>
