Adjust button visuals for dark theme

--- a/src/main/resources/static/css/notification.css
+++ b/src/main/resources/static/css/notification.css
@@ -46,10 +46,12 @@
 	.section {
 		padding: 0;
 	}
+	/*
 	.image img {
 		max-height: initial;
 		max-width: initial;
 	}
+	*/
 	.notification-div {
 		font-size: 1.2em !important; 
 	}
