--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -130,7 +130,7 @@
 		</section>
 		<section class="container cards" style="margin-top: 1.5em">
 			<div class="card">
-				<a class="button" th:utext="#{index.sign-up-now}"
+				<a class="button is-info is-outlined" th:utext="#{index.sign-up-now}"
 					style="width: 100%;" href="/register"></a>
 			</div>
 		</section>
