--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -81,7 +81,7 @@
 								<button class="button right is-info colored"
 									onclick="onDonateModalClicked()" th:text="#{donate}"></button>
 
-								<button class="button right is-danger colored"
+								<button class="button is-danger is-outlined"
 									th:text="#{cancel}" style="margin-right: 4px;"
 									onclick="$('#donate-modal').removeClass('is-active')"></button>
 
