--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -86,7 +86,7 @@
 								<button class="button is-link" type="submit" th:text="#{submit}"></button>
 							</div>
 							<div class="control">
-								<button class="button is-link is-light" type="button"
+								<button class="button is-danger is-outlined" type="button"
 									onclick="window.location = '/'" th:text="#{cancel}"></button>
 							</div>
 						</div>
