--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -208,7 +208,7 @@
 							<button class="button is-info" style="float: right;"
 								th:onclick="reportUserSubmit([[${user.idEncoded}]])"
 								th:text="#{submit}"></button>
-							<button class="button right is-danger colored"
+							<button class="button is-danger is-outlined"
 								style="margin-right: 4px;" onclick="closeModal()"
 								th:text="#{cancel}"></button>
 
